<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.msa.androidphotos15.AddPhotoActivity"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_photo"
        android:layout_gravity="center"
        android:textSize="30dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/move_imageView"
        android:layout_margin="5dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/move_radio_group"
        >
        <RadioButton
            android:id="@+id/move_cut_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cut and Move"
            />
        <RadioButton
            android:id="@+id/move_copy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Copy and Move"
            android:checked="true"
            />
    </RadioGroup>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Select Your Album"
            android:id="@+id/text3"
            />
        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/move_spinner"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/text3"
            android:layout_marginLeft="10dp"
        />

    </RelativeLayout>
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:layout_marginTop="10dp"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:id="@+id/move_button"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:layout_toRightOf="@+id/move_button"
        android:id="@+id/move_cancel_button"
        />
</RelativeLayout>
</LinearLayout>
