<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.msa.androidphotos15.AddPhotoActivity"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_photo"
        android:layout_gravity="center"
        android:textSize="30dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/edit_photo_imageview"
        android:layout_margin="5dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_tag"
            android:textSize="15dp"
            android:id="@+id/edit_loc_tag"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_loc_tag"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:text="@string/noTag"
            android:layout_marginTop="5dp"
            android:id="@+id/edit_noTag"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_loc_tag"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/edit_current_location_tags"
            android:visibility="invisible"
            android:layout_width="100dip"
            android:singleLine="false"
            android:maxHeight="45dp"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/edit_noTag"
            android:layout_marginLeft="90dp"
            android:background="@drawable/ic_add_box"
            android:id="@+id/edit_addLoc_button"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/edit_addLoc_button"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_delete"
            android:id="@+id/edit_deleteLoc_button"
            />
        <View
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_dark_background"
            android:layout_below="@+id/edit_deleteLoc_button"
            android:id="@+id/edit_line"
            />
        <TextView
            android:layout_below="@+id/edit_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Person Tag:  "
            android:textSize="15dp"
            android:id="@+id/edit_person_tag"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:singleLine="false"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_person_tag"
            android:layout_below="@+id/edit_line"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:text= "@string/noTag"
            android:layout_marginTop="5dp"
            android:id="@+id/edit_noTag2"
            />
        <TextView
            android:layout_width="100dip"
            android:singleLine="false"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edit_person_tag"
            android:layout_below="@+id/edit_line"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/edit_current_person_tag"
            android:visibility="invisible"
            android:maxHeight="45dp"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/edit_noTag2"
            android:layout_below="@+id/edit_line"
            android:layout_marginLeft="94.7dp"
            android:background="@drawable/ic_add_box"
            android:id="@+id/edit_addPerson_button"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/edit_addPerson_button"
            android:layout_below="@+id/edit_line"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_delete"
            android:id="@+id/edit_deletePerson_button"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="10dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:id="@+id/edit_save_button"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_toRightOf="@+id/edit_save_button"
            android:id="@+id/edit_cancel_button"
            />
    </RelativeLayout>

</LinearLayout>
