<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search Tags:"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="24dp"
        />
    <View
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_tag"
            android:textSize="15dp"
            android:id="@+id/search_loc_tag"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/search_loc_tag"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:text="@string/noTag"
            android:layout_marginTop="5dp"
            android:id="@+id/search_noTag"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/search_loc_tag"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/search_current_location_tags"
            android:visibility="invisible"
            android:layout_width="100dip"
            android:singleLine="false"
            android:maxHeight="45dp"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/search_noTag"
            android:layout_marginLeft="90dp"
            android:background="@drawable/ic_add_box"
            android:id="@+id/search_addLoc_button"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/search_addLoc_button"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_delete"
            android:id="@+id/search_deleteLoc"
            />
        <View
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_dark_background"
            android:layout_below="@+id/search_deleteLoc"
            android:id="@+id/search_line"
            />
        <TextView
            android:layout_below="@+id/search_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Person Tag:  "
            android:textSize="15dp"
            android:id="@+id/search_person_tag"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:singleLine="false"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/search_person_tag"
            android:layout_below="@+id/search_line"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:text= "@string/noTag"
            android:layout_marginTop="5dp"
            android:id="@+id/search_noTag2"
            />
        <TextView
            android:layout_width="100dip"
            android:singleLine="false"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/search_person_tag"
            android:layout_below="@+id/search_line"
            android:layout_marginLeft="60dp"
            android:textSize="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/search_current_person_tag"
            android:visibility="invisible"
            android:maxHeight="45dp"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/search_noTag2"
            android:layout_below="@+id/search_line"
            android:layout_marginLeft="94.7dp"
            android:background="@drawable/ic_add_box"
            android:id="@+id/search_addPerson_button"
            />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/search_addPerson_button"
            android:layout_below="@+id/search_line"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_delete"
            android:id="@+id/search_deletePerson_button"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="30dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="Search"
            android:textColor="@color/colorAccent"
            android:id="@+id/search_save_button"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_toRightOf="@+id/search_save_button"
            android:id="@+id/search_cancel_button"
            />
    </RelativeLayout>
    <View
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_resultList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryViewHolder" />





</LinearLayout>
